
public static class MagicStrings
{
    public static string LevelStartPosition = "Level Start Position";

    //Animators strings
    public static string PlayerJump = "Jump";
    public static string PlayerAttack = "Attacking";
    public static string PlayerPowerAttack = "Power Attack";
    public static string PlayerRunning = "IsRunning";
    public static string PlayerHurt = "Hurt";
    public static string PlayerDeath = "IsAlive";

    //Hound
    public static string Run = "Run";
    public static string Jump = "Jump";

    //Scenes
    public static string GameOver = "Game Over";
}
